--- a/package.json
+++ b/package.json
@@ -25,33 +25,33 @@
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "gh-pages": "^2.0.1",
-    "husky": "^1.1.2",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "husky": "^3.0.1",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "lint-staged": "^7.3.0",
-    "mocha": "^5.2.0",
-    "prettier": "1.14.3",
+    "lint-staged": "^9.2.1",
+    "mocha": "^6.2.0",
+    "prettier": "1.18.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "uglify-js": "^3.4.6",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0"
+    "uglify-js": "^3.6.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
   },
   "dependencies": {
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.7.2"
   },
   "husky": {
     "hooks": {
